[package]
name = "cryptananalysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ui"
path = "src/main.rs"

[[bin]]
name = "playfair"
path = "src/main2.rs"

[dependencies]
dioxus = { version = "0.2.4", features = ["desktop"] }
rand = "0.8.5"
